--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
     meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
     block header
     link(rel='stylesheet', href='/css/custom.min.css')
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Varela+Round')
 
   body
     block content
