CSS fixes for IE, etc

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,13 @@ html
     link(rel='stylesheet', href='/css/custom.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Varela+Round')
 
+    <!--[if lt IE 9]>
+      <script src="/dist/js/html5shiv.min.js"></script>
+    <![endif]-->
+    <!--[if lte IE 8]>
+      <script src="/dist/js/selectivizr.min.js"></script>
+    <![endif]-->
+
   body
     block content
 
